<resources>
    <string name="app_name">CN Enigma</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>

    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enigma">Enigma</string>
    <string name="input_text_to_encrypt">Input text to Encrypt</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="your_encrypted_data_will_be_displayed_here">Your encrypted data will be displayed here</string>
    <string name="ceaser_shift">Ceaser Shift</string>
    <string name="press_to_encrypt">Press to Encrypt</string>
    <string name="mid_reverse">Reverse</string>
    <string name="input_attribute">Input attribute</string>
    <string name="advance_shift">Advance Shift</string>
    <string name="full_reverse">Full Reverse</string>
    <string name="haphazard">Haphazard</string>
    <string name="binary">Binary</string>
    <string name="sentence_shift">Sentence Shift</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="half_reverse">Half Reverse</string>
    <string name="encryption_techniques">Encryption Techniques</string>
    <string name="attributes">Attributes</string>
    <string name="on_off">On/Off?</string>
    <string name="ceaser_shift_advance">Ceaser Shift Advance</string>
    <string name="pair_reverse">Pair Reverse</string>
    <string name="home">Home</string>
    <string name="logo">logo</string>
</resources>
