<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    android:orientation="vertical"
    tools:context=".MethodSelect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="24dp"
            app:srcCompat="@drawable/enigma_logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_methods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encryption_techniques"
                android:textAlignment="center"
                android:textColor="@color/font_lt"
                android:textSize="15sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rGp_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:background="@color/backgr_lt">
                <RadioButton
                    android:id="@+id/r_btn_cshift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ceaser_shift"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_cshift_adv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advance_shift"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_sshift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sentence_shift"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_halfrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_reverse"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_pairrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pair_reverse"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_fullReverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_reverse"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_haphazard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haphazard"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
                <RadioButton
                    android:id="@+id/r_btn_binary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    />
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_attrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:textColor="@color/font"
                android:textSize="14dp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_encrypt"
            android:layout_width="182dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/encrypt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>