<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    android:orientation="vertical"
    tools:context=".Encrypt_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="24dp"
            app:srcCompat="@drawable/enigma_logo" />

        <EditText
            android:id="@+id/txt_encrypt"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@color/white"
            android:editable="true"
            android:hint="@string/input_text_to_encrypt"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:lineSpacingExtra="8sp"
            android:paddingStart="20dp"
            android:scrollbars="horizontal|vertical"
            android:soundEffectsEnabled="true"
            android:textColor="@color/font"
            android:textColorHint="@color/hint_font"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="182dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>